               call

             • re-design and unify the function output by removing and
               adding output objects, see manual for further details,

             • the way the error is calculated and returned has been
               changed (see manual for details),

             • add argument ‘txtProgressBar’ (logical),

             • minor graphical adjustments,

             • a lot of internal code polishing.

         • ‘calc_Statistics()’

             • default setting of weights definition changed from 1/s
               to 1/s^2

         • ‘merge_Risoe.BINfileData()’

             • Confusing warning message corrected (#230, Thomas Kolb).

         • ‘plot_AbanicoPlot()’

             • zlim-definition bug removed,

             • automatic bandwidth adjustment implemented,

             • automatic z-axis scaling for zero scatter implemented,

             • qr (quartile range) set as default option for scatter
               polygon,

             • option cinn (confidence intervals) changed to pnn
               (percentiles),

             • summary content 'in confidence interval' changed to 'in
               2 sigma',

             • argument central.value renamed to z.0,

             • argument centrality removed,

             • argument bar.col added.

         • ‘plot_KDE()’

             • summary content 'in confidence interval' changed to 'in
               2 sigma'

         • ‘plot_RadialPlot()’

             • summary content 'in confidence interval' changed to 'in
               2 sigma'

         • ‘plot_RLum.Data.Curve()’

             • NA-test implemented. Nothing is plotted if the curve
               contains NA-values (previous behaviour: function stopped
               with an error).

         • ‘readXSYG2R()’

             • The import will not break any longer if the XSYG file is
               incomplete. Incomplete sequences will be removed from
               the output (incl. terminal feedback).
