@@ -7,7 +7,7 @@
 "rejection.criteria","dose.points","rejection.criteria","set","rejection.criteria","dots",NA,"plot",NA,NA,"corr.fieldChanges","txtProgressBar","pdf.weight",NA,NA,"plot","init.values","init.values","sigmab","dose.rate.unit",NA,"signal.integral.max",NA,NA,NA,NA,NA,"fit.calcError","sample_code",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,"plot.ratio","mtext","fit.NumberRegPoints","rug","dispersion","centrality","ltype","curve.transformation",NA,NA,"bin.rows",NA,NA,"forced.VersionNumber",NA,NA,"protocol",NA,NA,NA,NA,NA,NA,NA
 "fit.trace","sequence.structure","dose.points","dtype","log",NA,NA,"dots",NA,NA,"est.age",NA,"pdf.sigma",NA,NA,"dots","plot","plot",NA,NA,NA,NA,NA,NA,NA,NA,NA,"LED.power","sample_ID",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,"rotate","summary","fit.NumberRegPointsReal","normal_curve","summary","mtext","curve.transformation","plot.single",NA,NA,"bin.cols",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
 "n.MC","plot","mtext.outer","keep.SEL","dots",NA,NA,NA,NA,NA,"half.depth",NA,"pdf.colors",NA,NA,NA,"dots","multicore",NA,NA,NA,NA,NA,NA,NA,NA,NA,"LED.wavelength","LED.power",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,"mtext","summary.pos","fit.bounds","summary","summary.pos","summary","dose_rate","dots",NA,NA,"rug",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-"slide.show.density","plot.single","plot","info.measurement",NA,NA,NA,NA,NA,NA,"error",NA,"pdf.scale",NA,NA,NA,NA,"dots",NA,NA,NA,NA,NA,NA,NA,NA,NA,"cex.global","LED.wavelength",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,"summary","legend","NumberIterations.MC","summary.pos","polygon.col","summary.pos","temp.lab",NA,NA,NA,"xaxis.energy",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+"slide.show_density","plot.single","plot","info.measurement",NA,NA,NA,NA,NA,NA,"error",NA,"pdf.scale",NA,NA,NA,NA,"dots",NA,NA,NA,NA,NA,NA,NA,NA,NA,"cex.global","LED.wavelength",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,"summary","legend","NumberIterations.MC","summary.pos","polygon.col","summary.pos","temp.lab",NA,NA,NA,"xaxis.energy",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
 "txtProgressBar","dots","plot.single","log",NA,NA,NA,NA,NA,NA,NA,NA,"plot.proportions",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,"sample_code","cex.global",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,"summary.pos","legend.pos","output.plot","colour","order","legend","cex.global",NA,NA,NA,"legend.text",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
 "plot",NA,"dots","output.plot",NA,NA,NA,NA,NA,NA,NA,NA,"plot",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,"output.path","fit.trace",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,"legend","par.local","output.plotExtended","dots","bw","legend.pos","dots",NA,NA,NA,"dots",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
 "dots",NA,NA,"output.plot.single",NA,NA,NA,NA,NA,NA,NA,NA,"dots",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,"output.terminal","fit.advanced",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,"legend.pos","na.rm","output.plotExtended.single",NA,"output","stats",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
