@@ -1,12 +1,12 @@
 % latex table generated in R 3.3.0 by xtable 1.7-4 package
-% Sun Aug  2 13:56:34 2015
+% Sun Aug  2 15:40:23 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
   \hline
  & Name & Title & Description & Version & m.Date & m.Time & Author \\ 
   \hline
-1 & analyse\_IRSAR.RF & Analyse IRSAR RF measurements & $<$br /$>$ Function to analyse IRSAR RF measurements on K-feldspar samples, performed$<$br /$>$ using the protocol according to Erfurt et al. (2003)$<$br /$>$ & 0.4.0 & 2015-08-02 & 13:52:34
+1 & analyse\_IRSAR.RF & Analyse IRSAR RF measurements & $<$br /$>$ Function to analyse IRSAR RF measurements on K-feldspar samples, performed$<$br /$>$ using the protocol according to Erfurt et al. (2003)$<$br /$>$ & 0.4.0 & 2015-08-02 & 15:38:31
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   2 & analyse\_pIRIRSequence & Analyse post-IR IRSL sequences & $<$br /$>$ The function performs an analysis of post-IR IRSL sequences including curve$<$br /$>$ fitting on  RLum.Analysis  objects.$<$br /$>$ & 0.1.4 & 2015-07-24 & 16:13:49
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
